--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="lt">
 
 <head>
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <title>Kalbynas.lt - Pakalbėkim apie kalbą</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Visokie su lietuvių kalba susiję dalykėliai">
+    <meta name="keywords" content="Lingvistika, Lituanistika, Kalbotyra, Baltistika">
+    <link rel="alternate" hreflang="en" href="https://en.kalbynas.lt">
+    <link rel="preload" as="image" href="/static/lt.png">
+    <link rel="preload" as="image" href="/static/en.png">
+    <link href='/static/DoulosSIL.css' rel='stylesheet'>
+
+
     <link rel="stylesheet" href="/placeholder.css" />
     <link rel="stylesheet" href="/static/global.css" />
     <script>const globalParams = undefined</script>
