--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -15,14 +15,14 @@
     <link href='/static/DoulosSIL.css' rel='stylesheet'>
 
 
-    <link rel="stylesheet" href="/static/global.css" />
-    <link rel="stylesheet" href="/placeholderPath.css" />
+    <link rel="stylesheet" href="/global.css"/>
+    <link rel="stylesheet" href="/placeholderPath.css"/>
     <script>const globalParams = undefined</script>
 </head>
 
 <body>
-    <div id="root"></div>
-    <script src="/placeholderPath.js"></script>
+<div id="root"></div>
+<script src="/placeholderPath.js"></script>
 </body>
 
 </html>
