--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -17,12 +17,15 @@
 
     <link rel="stylesheet" href="/global.css"/>
     <link rel="stylesheet" href="/placeholderPath.css"/>
-    <script>const globalParams = undefined</script>
+    <script>const hash = undefined
+    const globalParams = undefined
+    </script>
 </head>
 
 <body>
 <div id="root"></div>
 <script src="/placeholderPath.js"></script>
+<script id="dev"></script>
 </body>
 
 </html>
