modularise js (splitting)

--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -24,7 +24,7 @@
 
 <body>
 <div id="root"></div>
-<script src="/placeholderPath.js"></script>
+<script type="module" src="/placeholderPath.js"></script>
 <script id="dev"></script>
 </body>
 
