--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -1,31 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
-<head>
-
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <head>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>placeholder</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="placeholder">
-    <meta name="keywords" content="placeholder">
-    <link rel="alternate">
-    <link rel="preload" as="image" href="/static/lt.png">
-    <link rel="preload" as="image" href="/static/en.png">
-    <link href='/static/DoulosSIL.css' rel='stylesheet'>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="placeholder" />
+    <meta name="keywords" content="placeholder" />
+    <link rel="alternate" />
+    <link rel="preload" as="image" href="/static/lt.png" />
+    <link rel="preload" as="image" href="/static/en.png" />
+    <link href="/static/DoulosSIL.css" rel="stylesheet" />
 
-
-    <link rel="stylesheet" href="/global.css"/>
-    <link rel="stylesheet" href="/placeholderPath.css"/>
-    <script>const hash = undefined
-    const globalParams = undefined
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/placeholderPath.css" />
+    <script>
+      const hash = undefined
+      const globalParams = undefined
     </script>
-</head>
+  </head>
 
-<body>
-<div id="root"></div>
-<script type="module" src="/placeholderPath.js"></script>
-<script id="dev"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/placeholderPath.js"></script>
+    <script id="dev"></script>
+  </body>
 </html>
