--- a/test/back/pages/common/default_lt.html
+++ b/test/back/pages/common/default_lt.html
@@ -1,31 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="lt">
-
-<head>
-
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <head>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>kalbynas.lt - Pakalbėkim apie kalbą</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Visokie su lietuvių kalba susiję dalykėliai">
-    <meta name="keywords" content="Lingvistika, Lituanistika, Kalbotyra, Baltistika">
-    <link rel="alternate" hreflang="en" href="https://en.kalbynas.lt/test">
-    <link rel="preload" as="image" href="/static/lt.png">
-    <link rel="preload" as="image" href="/static/en.png">
-    <link href='/static/DoulosSIL.css' rel='stylesheet'>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Visokie su lietuvių kalba susiję dalykėliai"
+    />
+    <meta
+      name="keywords"
+      content="Lingvistika, Lituanistika, Kalbotyra, Baltistika"
+    />
+    <link rel="alternate" hreflang="en" href="https://en.kalbynas.lt/test" />
+    <link rel="preload" as="image" href="/static/lt.png" />
+    <link rel="preload" as="image" href="/static/en.png" />
+    <link href="/static/DoulosSIL.css" rel="stylesheet" />
 
-
-    <link rel="stylesheet" href="/global.css?hash=abc123"/>
-    <link rel="stylesheet" href="/test.css?hash=abc123"/>
+    <link rel="stylesheet" href="/global.css?hash=abc123" />
+    <link rel="stylesheet" href="/test.css?hash=abc123" />
     <script>
-        const globalParams = {"hello": "world"}
+      const globalParams = {hello: 'world'}
     </script>
-</head>
+  </head>
 
-<body>
-<div id="root"></div>
-<script type="module" src="/test.js?hash=abc123"></script>
-
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/test.js?hash=abc123"></script>
+  </body>
 </html>
