add Lithuanian article on present tense verbs

--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -11,6 +11,7 @@
     <link rel="preload" as="image" href="/static/lt.png" />
     <link rel="preload" as="image" href="/static/en.png" />
     <link href="/static/DoulosSIL.css" rel="stylesheet" />
+    <link href="/static/NotoSans.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/placeholderPath.css" />
