--- a/test/back/pages/common/default_en.html
+++ b/test/back/pages/common/default_en.html
@@ -14,6 +14,7 @@
     <link rel="preload" as="image" href="/static/lt.png" />
     <link rel="preload" as="image" href="/static/en.png" />
     <link href="/static/DoulosSIL.css" rel="stylesheet" />
+    <link href="/static/NotoSans.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="/global.css?hash=abc123" />
     <link rel="stylesheet" href="/test.css?hash=abc123" />
