--- a/src/back/pages/common/default.html
+++ b/src/back/pages/common/default.html
@@ -15,6 +15,15 @@
 
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/placeholderPath.css" />
+
+    <link rel="stylesheet" href="https://cdn.statically.io/gh/Voldemortas/zodziu-dalys/master/zodziu-dalys.css" />
+    <style>
+      :root {
+        --zd-default-color: var(--color-green-4);
+      }
+    </style>
+    <script src="https://cdn.statically.io/gh/Voldemortas/zodziu-dalys/master/zodziu-dalys.js"></script>
+
     <script>
       const hash = undefined
       const globalParams = undefined
