--- a/test/back/pages/common/default_lt.html
+++ b/test/back/pages/common/default_lt.html
@@ -21,6 +21,15 @@
 
     <link rel="stylesheet" href="/global.css?hash=abc123" />
     <link rel="stylesheet" href="/test.css?hash=abc123" />
+
+    <link rel="stylesheet" href="https://cdn.statically.io/gh/Voldemortas/zodziu-dalys/master/zodziu-dalys.css" />
+    <style>
+      :root {
+        --zd-default-color: var(--color-green-4);
+      }
+    </style>
+    <script src="https://cdn.statically.io/gh/Voldemortas/zodziu-dalys/master/zodziu-dalys.js"></script>
+
     <script>
       const globalParams = {hello: 'world'}
     </script>
