--- a/test/back/pages/common/default_lt.html
+++ b/test/back/pages/common/default_lt.html
@@ -16,8 +16,8 @@
     <link rel="alternate" hreflang="en" href="https://en.kalbynas.lt/test" />
     <link rel="preload" as="image" href="/static/lt.png" />
     <link rel="preload" as="image" href="/static/en.png" />
-    <link href="/static/DoulosSIL.css" rel="stylesheet" />
-    <link href="/static/NotoSans.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/static/DoulosSIL.css" />
+    <link rel="stylesheet" href="/static/NotoSans.css" />
 
     <link rel="stylesheet" href="/global.css?hash=abc123" />
     <link rel="stylesheet" href="/test.css?hash=abc123" />
